--- a/app/templates/premium.html
+++ b/app/templates/premium.html
@@ -7,18 +7,21 @@
 <script src="{{url_for('static', filename='js/premium.js')}}"></script>
 {% endblock %}
 {% block body %}
-<!--<div class="m-5">-->
-<!--    <h1 class="text-center m-5">Больше специально для тебя</h1>-->
-<!--    <h2 class="text-center m-5 text-muted">Выбери свой тариф</h2>-->
-<!--    <form class="row row-cols-1 row-cols-md-1 mb-3 text-center" onsubmit="return false" oninput="level.value = flevel.valueAsNumber">-->
-<!--      <input name="flevel" id="flying" type="range" min="5" max="100" value="20" step="1"><br>-->
-<!--      <h1><output for="flying" name="level">20</output> ГБ</h1>-->
-<!--    </form>-->
-<!--</div>-->
-<div class="ctrl">
-  <span id="view">0</span>
-  <input id="num" type=number min="0" max="1000" step="100" value="0">
-  <input id="range" type="range" min="0" max="1000" step="100" value="0">
+<div class="align-items-center container px-5 py-5">
+  <h1 class="text-center m-5">Выбери свой тариф</h1>
+  <form class="row row-cols-1 row-cols-md-1 mb-3 text-center" onsubmit="return false" oninput="level.value = flevel.valueAsNumber">
+    <input name="flevel" id="flying" type="range" min="5" max="100" value="20" step="1"><br>
+    <h1><output for="flying" name="level">20</output> ГБ</h1>
+    <div class="py-5 text-center text-end">
+      <button class="btn btn-lg my-pink-button">Оформить подписку</button>
+      <a href="#" class="btn my-pink-outline-button btn-lg">Хочу больше места</a>
+    </div>
+  </form>
 </div>
+<!--<div class="ctrl">-->
+<!--  <span id="view">0</span>-->
+<!--  <input id="num" type=number min="0" max="1000" step="100" value="0">-->
+<!--  <input id="range" type="range" min="0" max="1000" step="100" value="0">-->
+<!--</div>-->
 {% endblock %}
 
