--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel='stylesheet' href="{{ url_for('static', filename='css/main.css') }}">
+
+        {% if dark %}
+        <link rel='stylesheet' href="{{ url_for('static', filename='css/dark.css') }}">
+        {% else %}
+        <link rel='stylesheet' href="{{ url_for('static', filename='css/light.css') }}">
+        {% endif %}
+
         <title>{% block title %}{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% block head %}{% endblock %}
@@ -48,7 +55,9 @@
                 </div>
               {% else %}
               <div class="col-md-3 text-end">
-                <p>Кот</p>
+                  <form method="post" action="/light?url={{url}}">
+                    <button class="btn btn-primary my-pink-button" type="submit">Кот</button>
+                  </form>
               </div>
               {% endif %}
             </header>
