--- a/app/templates/cloud.html
+++ b/app/templates/cloud.html
@@ -22,7 +22,7 @@
 
         {% for file in files %}
           <div class="col">
-            <div class="card">
+            <div class="card my-card">
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="card-text">{{ file.name  }}</p>
