fix edit account

--- a/app/templates/edit_account.html
+++ b/app/templates/edit_account.html
@@ -12,11 +12,11 @@
             <label for="floatingOldPassword">Старый пароль<small>*</small></label>
           </div>
           <div class="form-floating mb-3">
-            <input type="text" name='Login' class="form-control" id="floatingLogin" placeholder="Login">
+            <input type="text" name='Login' class="form-control" id="floatingLogin" placeholder="Login" value={{user.name}}>
             <label for="floatingLogin">Новый логин</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="email" name="Email" class="form-control" id="floatingEmail" placeholder="name@example.com">
+            <input type="email" name="Email" class="form-control" id="floatingEmail" placeholder="name@example.com" value={{user.email}}>
             <label for="floatingEmail">Новый адрес эл.почты</label>
           </div>
           <div class="form-floating mb-3">
