--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -28,6 +28,7 @@
             <input value="{{ RepeatPassword if RepeatPassword else '' }}" type="password" name="RepeatPassword" class="form-control" id="floatingPasswordRepeat" placeholder="Password">
             <label for="floatingPasswordRepeat">Повторите пароль<small>*</small></label>
           </div>
+          <p style="color:#FFF">В пароле должны присутствовать спец символы, буквы и цифры</p>
           <button class="mb-3 w-100 btn btn-lg btn-primary my-pink-button" type="submit">Создать аккаунт</button>
           <a class="w-100 btn btn-lg btn-outline-secondary" href="/" >Войти</a>
           <hr class="my-pink-line">
