--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -56,7 +56,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Ты знаешь Python3 + Flask? Мы ждём тебя!</h2>
-        <p class="lead">У нас невысокий порог прохода в команду. Всегда найдутся задачи любой сложности. Хочешь работать у нас, но живёшь за границей? Не проблема! Рады взять на удалёнку. Гарантируем полностью свободный график и долю с продаж. Если заинтересовала вакансия, можно написать на help@lava-land.ru</p>
+        <p class="lead">У нас всегда найдутся задачи любой сложности. Хочешь работать у нас, но живёшь за границей? Не проблема! Рады взять на удалёнку. Гарантируем полностью свободный график и долю с продаж. Если заинтересовала вакансия, можно написать на help@lava-land.ru</p>
       </div>
       <div class="col-md-5">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" src="https://p4.wallpaperbetter.com/wallpaper/484/17/288/cooperation-wallpaper-preview.jpg">
