--- a/app/templates/cloud.html
+++ b/app/templates/cloud.html
@@ -25,7 +25,7 @@
             <div class="card my-card">
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
-                  <p class="card-text">{{ file.name  }}</p>
+                  <p class="my-clip card-text">{{ file.name  }}</p>
                   <small class="text-muted">{{ file.date.date() }}</small>
                 </div>
                 {% if file.desc %}
