--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -15,7 +15,7 @@ color: #B35CF7;
 }
 
 .my-pink-link {
-    color: #585858;
+    color: #FFF;
 	position: relative;
 	font-size: 1.25rem;
 	text-decoration: none;
@@ -29,14 +29,12 @@ color: #B35CF7;
 .my-pink-link::before {
 	content: '';
 	position: absolute;
-	left: 0; bottom: -5px;
+	left: 0;
+	right: 0;
+	bottom: -5px;
 	width: 0;
 	height: 1.5px;
 	background-color: #DD24EE;
-}
-
-.my-pink-link-active:hover {
-    color: #DD24EE;
 }
 
 /* Только для пк: */
@@ -49,7 +47,17 @@ and (min-device-width : 1200px) {
 .my-pink-link::before {
 	transition: width 0.30s;}
 }
-
+.btn {
+}
+.my-outline-button{
+    color: #FFF;
+    border-color: #FFF;
+}
+.my-outline-button:hover {
+  color: #000;
+  background-color: #FFF;
+  border-color: #6c757d;
+}
 .my-pink-outline-button {
     color: #DD24EE;
     border-color: #DD24EE;
@@ -58,7 +66,6 @@ and (min-device-width : 1200px) {
     background-color: #DD24EE;
     border-color: #DD24EE;
 }
-
 
 .my-pink-line {
     border: none; /* Убираем границу для браузера Firefox */
@@ -93,4 +100,132 @@ word-wrap: break-word;
   -ms-user-select: none;       /* Internet Explorer/Edge */
   user-select: none;           /* Non-prefixed version, currently
                                   not supported by any browser */
+}
+body {
+  background: -webkit-linear-gradient(right, #915160, #2f5ba1);
+  background: linear-gradient(270deg, #915160, #2f5ba1);
+ } 
+/*
+body {
+background: #141414;
+}
+*/
+p {
+color: #FFF;
+}
+h1 {
+color: #FFF;
+}
+h2 {
+color: #FFF;
+}
+h3 {
+color: #FFF;
+}
+h4 {
+color: #FFF;
+}
+a {
+color: #FFF;
+}
+span {
+color: #FFF;
+}
+small {
+    color: #FFF;
+}
+
+.my-pink-link:hover {
+    color: #FFF;
+}
+
+.my-pink-link-active {
+    color: #FFF;
+}
+.my-pink-outline-button:hover {
+    color: #fff;
+}
+.my-card {
+    border: 1px solid transparent;
+    border-radius: .3rem;
+    border-color: #FFF;
+}
+.w {
+    color: FFF;
+}
+.g {
+    color: #FFF;
+    background: #1f1f1f;
+    border: none;
+
+}
+.g:focus {
+    color: #FFF;
+    background: #1f1f1f;
+    border: none;
+}
+button.scroll_down {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  height: 50px;
+  width: 30px;
+  bottom: 60px;
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 20px;
+  cursor: pointer;
+  outline: none;
+}
+button.scroll_down:before {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  content: '';
+  width: 6px;
+  height: 6px;
+  margin-left: -3px;
+  background-color: #fff;
+  border-radius: 100%;
+  -webkit-animation: scroll_down_btn-animation 2s infinite;
+  animation: scroll_down_btn-animation 2s infinite;
+  box-sizing: border-box;
+}
+
+@keyframes scroll_down_btn-animation {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    transform: translate(0, 20px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes scroll_down_btn-animation {
+  0% {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: translate(0, 20px);
+    transform: translate(0, 20px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
