--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -14,14 +14,6 @@
 color: #B35CF7;
 }
 
-.my-pink-link {
-    color: #FFF;
-	position: relative;
-	font-size: 1.25rem;
-	text-decoration: none;
-	justify-content: center;
-}
-
 .my-pink-link:hover {
     color: #DD24EE;
 }
@@ -37,6 +29,7 @@ color: #B35CF7;
 	background-color: #DD24EE;
 }
 
+
 /* Только для пк: */
 @media only screen
 and (min-device-width : 1200px) {
@@ -47,16 +40,12 @@ and (min-device-width : 1200px) {
 .my-pink-link::before {
 	transition: width 0.30s;}
 }
-.btn {
-}
-.my-outline-button{
-    color: #FFF;
-    border-color: #FFF;
+.my-pink-checkbox {
+    accent-color: #7A1F9C;
 }
 .my-outline-button:hover {
   color: #000;
   background-color: #FFF;
-  border-color: #6c757d;
 }
 .my-pink-outline-button {
     color: #DD24EE;
@@ -67,165 +56,18 @@ and (min-device-width : 1200px) {
     border-color: #DD24EE;
 }
 
-.my-pink-line {
-    border: none; /* Убираем границу для браузера Firefox */
-    color: #7A1F9C; /* Цвет линии для остальных браузеров */
-    background-color: #7A1F9C; /* Цвет линии для браузера Firefox и Opera */
-    height: 2px; /* Толщина линии */
-    opacity: 100;
-}
-
-.my-pink-button {
-    background: #7A1F9C;
-    color: #FFF;
-    border: None;
-}
 .my-pink-button:hover {
     color: #FFF;
     background: #DD24EE;
 }
-.my-pink-checkbox {
-    accent-color: #7A1F9C;
-}
+
 .my-big-text {
 word-wrap: break-word;
 }
 
-}
-.unselectable {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none;   /* Chrome/Safari/Opera */
-  -khtml-user-select: none;    /* Konqueror */
-  -moz-user-select: none;      /* Firefox */
-  -ms-user-select: none;       /* Internet Explorer/Edge */
-  user-select: none;           /* Non-prefixed version, currently
-                                  not supported by any browser */
-}
-body {
-  background: -webkit-linear-gradient(right, #915160, #2f5ba1);
-  background: linear-gradient(270deg, #915160, #2f5ba1);
- } 
-/*
-body {
-background: #141414;
-}
-*/
-p {
-color: #FFF;
-}
-h1 {
-color: #FFF;
-}
-h2 {
-color: #FFF;
-}
-h3 {
-color: #FFF;
-}
-h4 {
-color: #FFF;
-}
-a {
-color: #FFF;
-}
-span {
-color: #FFF;
-}
-small {
-    color: #FFF;
-}
-
 .my-pink-link:hover {
-    color: #FFF;
-}
-
-.my-pink-link-active {
-    color: #FFF;
+    color: #DD24EE;
 }
 .my-pink-outline-button:hover {
     color: #fff;
-}
-.my-card {
-    border: 1px solid transparent;
-    border-radius: .3rem;
-    border-color: #FFF;
-}
-.w {
-    color: FFF;
-}
-.g {
-    color: #FFF;
-    background: #1f1f1f;
-    border: none;
-
-}
-.g:focus {
-    color: #FFF;
-    background: #1f1f1f;
-    border: none;
-}
-button.scroll_down {
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  height: 50px;
-  width: 30px;
-  bottom: 60px;
-  background-color: transparent;
-  border: 2px solid white;
-  border-radius: 20px;
-  cursor: pointer;
-  outline: none;
-}
-button.scroll_down:before {
-  position: absolute;
-  top: 10px;
-  left: 50%;
-  content: '';
-  width: 6px;
-  height: 6px;
-  margin-left: -3px;
-  background-color: #fff;
-  border-radius: 100%;
-  -webkit-animation: scroll_down_btn-animation 2s infinite;
-  animation: scroll_down_btn-animation 2s infinite;
-  box-sizing: border-box;
-}
-
-@keyframes scroll_down_btn-animation {
-  0% {
-    transform: translate(0, 0);
-    opacity: 0;
-  }
-  40% {
-    opacity: 1;
-  }
-  80% {
-    transform: translate(0, 20px);
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@-webkit-keyframes scroll_down_btn-animation {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-    opacity: 0;
-  }
-  40% {
-    opacity: 1;
-  }
-  80% {
-    -webkit-transform: translate(0, 20px);
-    transform: translate(0, 20px);
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
 }
