--- a/app/templates/edit_account.html
+++ b/app/templates/edit_account.html
@@ -27,10 +27,10 @@
             <input type="password" name="RepeatPassword" class="form-control" id="floatingPasswordRepeat"  placeholder="password">
             <label for="floatingPasswordRepeat">Повторите пароль</label>
           </div>
-          <button class="w-100 btn btn-lg btn-primary" type="submit">Изменить аккаунт</button>
+          <button class="w-100 btn btn-lg my-pink-button" type="submit">Изменить аккаунт</button>
           <hr class="my-4">
-          <small class="text-muted">Оставьте поле пустым, чтобы не изменять его.</small>
-          <small class="text-muted">Используя аккаунт, Вы подтверждаете согласие с <a href="/politic">Политикой сайта</a></small>
+          <small>Оставьте поле пустым, чтобы не изменять его.</small>
+          <small>Используя аккаунт, Вы подтверждаете согласие с <a href="/politic">Политикой сайта</a></small>
         </form>
       </div>
     </div>
