--- a/app/static/css/premium.css
+++ b/app/static/css/premium.css
@@ -1,27 +1,48 @@
-#view {
-  display: block;
-  text-align: center;
-  font-size: 22pt;
-}
 .ctrl {
   width: 200px;
   position: relative;
 }
-input {
-  display: block;
-  width: 100%;
-}
-.good {
-  display: inline-block;
-  vertical-align: top;
-  width: 100px;
-  padding: 5px;
-  margin: 5px;
-  border: 1px solid silver;
-}
-.good .option {
-  display: none;
-}
 #num {
 width: 5em;
 }
+.my-div {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 16pt;
+}
+.my-div span {
+font-size: 22pt;
+}
+input[type="range"] {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  -webkit-appearance: none;
+  height: 7px;
+  background: #7A1F9C;
+  border-radius: 0.3rem;
+}
+input[type="number"] {
+background-opacity: 0;
+}
+/*
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #ff4500;
+  cursor: ew-resize;
+  box-shadow: 0 0 2px 0 #555;
+  transition: background .3s ease-in-out;
+}
+
+
+input[type=range]::-webkit-slider-runnable-track  {
+  -webkit-appearance: none;
+  box-shadow: none;
+  border: none;
+  background: transparent;
+}
+*/
