--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,25 +6,32 @@
 <h1 class="text-center m-5">Создатели</h1>
 <div class="container marketing">
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-3">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://sun9-9.userapi.com/s/v1/ig2/7tEx901z0VsgLPuwq6Z6AGNOY07KAooJD7x8GxnF3v7hFHcAZ6aTT1HhPNT7226Az2BEnrLnZpMF_XDNI3vR1CqT.jpg?size=2160x2160&quality=95&type=album">
         <h2>Лаврентий Наумов</h2>
         <p>Программист</p>
-        <p><a class="btn btn-secondary" href="https://vk.com/prostolavr">Заглянуть в вк</a></p>
+        <p><a class="btn my-outline-button" href="https://vk.com/prostolavr">Заглянуть в вк</a></p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-3">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://i.pinimg.com/originals/2e/2e/21/2e2e2125ee53807c2d77b34773f84b5c.jpg">
         <h2>Демьян Бубнов</h2>
         <p>Программист</p>
-        <p><a class="btn btn-secondary" href="https://vk.com/id618170319">Заглянуть в вк</a></p>
+        <p><a class="btn my-outline-button" href="https://vk.com/id618170319">Заглянуть в вк</a></p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-3">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://sun9-11.userapi.com/s/v1/if2/iYMxy1oIw7BkUev8n7_ycCytTSv61R070IHMfZZZ55CMuW5bDfJX_qtgRHG6J1HyUj5nN_tOlrqODqqvfyahVxCO.jpg?size=499x1080&quality=96&type=album">
+        <h2>Анастасия Хацкевич</h2>
+        <p>Тестировщик</p>
+        <p><a class="btn my-outline-button" href="https://vk.com/anastasiia1267">Заглянуть в вк</a></p>
+      </div>
+      <div class="col-lg-3">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://thumbs.dreamstime.com/b/%D1%87%D0%B5%D1%80%D0%BD%D1%8B%D0%B9-%D1%83%D0%BA%D0%B0%D0%B7%D1%8B%D0%B2%D0%B0%D1%8E%D1%89%D0%B8%D0%B9-%D0%BF%D0%B0%D0%BB%D0%B5%D1%86-%D0%BA-%D1%82%D0%B5%D0%B1%D0%B5-%D1%87%D0%B5%D1%80%D0%BD%D0%B0%D1%8F-%D1%80%D1%83%D0%BA%D0%B0-%D1%83%D0%BA%D0%B0%D0%B7%D1%8B%D0%B2%D0%B0%D1%8E%D1%89%D0%B0%D1%8F-%D0%BF%D0%B0%D0%BB%D1%8C%D1%86%D0%B5%D0%BC-%D0%BD%D0%B0-229124886.jpg">
         <h2>Ты</h2>
         <p>Покупая подписку ты поддерживаешь нас и становишься частью этого проекта! Любой вклад поможет проекту развиваться дальше</p>
-          <p><a class="btn btn-secondary" href="/premium">Поддержать</a></p>
+          <p><a class="btn my-outline-button" href="/premium">Поддержать</a></p>
       </div>
     </div>
+
 
 
     <hr class="featurette-divider">
