--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -8,7 +8,7 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Тут можно будет посмотреть данные об аккаунте</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <a href="/account/edit"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Редактировать</button></a>
+        <a href="/account/edit"><button type="button" class="btn my-pink-button btn-lg px-4 gap-3">Редактировать</button></a>
       </div>
     </div>
   </div>
