--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,21 +1,16 @@
 <!doctype html>
-<html>
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel='stylesheet' href="{{ url_for('static', filename='css/main.css') }}">
-
-        {% if dark %}
-        <link rel='stylesheet' href="{{ url_for('static', filename='css/dark.css') }}">
-        {% else %}
-        <link rel='stylesheet' href="{{ url_for('static', filename='css/light.css') }}">
-        {% endif %}
+        <link rel='stylesheet' href="{{ url_for('static', filename='css/first.css') }}">
 
         <title>{% block title %}{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% block head %}{% endblock %}
     </head>
     <body>
+        <link rel='stylesheet' href="{{ url_for('static', filename='css/main.css') }}">
         <div class=" container">
             <header class="my-pink-header my-header d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
               <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
@@ -48,18 +43,12 @@
                   <li><a href="/about" class="nav-link px-2 fs-5 my-pink-link">О нас</a></li>
                 {% endif %}
               </ul>
-              {% if login %}
-                <div class="col-md-3 text-end">
-                  <a href="/account" type="button" class="btn btn-primary me-2 my-pink-button">Аккаунт</a>
-                  <a href="/account/logout" type="button" class="btn btn-outline-primary my-pink-outline-button ">Выйти</a>
-                </div>
-              {% else %}
               <div class="col-md-3 text-end">
-                  <form method="post" action="/light?url={{url}}">
-                    <button class="btn btn-primary my-pink-button" type="submit">Кот</button>
-                  </form>
+                {% if login %}
+                  <a href="/account" type="button" class="btn me-2 my-outline-button">Аккаунт</a>
+                  <a href="/account/logout" type="button" class="btn my-pink-button">Выйти</a>
+                {% endif %}
               </div>
-              {% endif %}
             </header>
         </div>
         {% block body %}{% endblock %}
