--- a/app/templates/support.html
+++ b/app/templates/support.html
@@ -10,29 +10,33 @@
     <h3 class="pb-4 mb-4 fst-italic border-bottom">
         Что нового?
     </h3>
-    <article class="blog-post">
+    <article class="blog-post my-card p-3">
+        <h2 class="blog-post-title">Новый дизайн</h2>
+        <p class="blog-post-meta">31 мая, 2022 автор: Лаврентий</p>
+
+        <p>Мы обновили дизайн сайта. Обязательно ждём ваши отзывы и предложения на почту help@lava-land.ru! В ближайшее время наши дизайнеры подготовят макеты светлых и тёмных вариантов оформления сайта. Планируется проведение голосования выбора тёмного и светлого оформления сайта. Место проведения голосования и представленные варианты будут опубликованы в течение июня.</p>
+    </article>
+    <article class="blog-post my-card p-3 my-3">
         <h2 class="blog-post-title">И снова новый функционал</h2>
         <p class="blog-post-meta">10 мая, 2022 автор: Лаврентий</p>
 
         <p>Теперь отрображается процесс загрузки файлов, поля ввода не слетают при неверном вводе, страницы адаптируются под мобильные устройства, ссылка копируется одним нажатием кнопки, а также доступна загрузка файлов до 16ГБ! Улучшена производительность и безопасность.</p>
         <p>Ждём ваши новые предложения функционала!</p>
-        <hr>
     </article>
-    <article class="blog-post">
+    <article class="blog-post my-card p-3 my-3">
         <h2 class="blog-post-title">Больше нового функционала</h2>
         <p class="blog-post-meta">15 апреля, 2022 автор: Лаврентий</p>
 
         <p>Сегодня состоялся тестовый релиз нового функционала. Теперь можно делиться файлами (а можно и не делится), редактировать имена файлов и давать им описание, использовать кириллицу в названиях файлов, следить за датой загрузки файла и много всего ещё.</p>
         <p>Отныне можно сказать, что lava-land.ru - нерушимая крепость! Сайт был полностью переведён на протокол https.</p>
-        <hr>
+
     </article>
-    <article class="blog-post">
+    <article class="blog-post my-card p-3 my-3">
         <h2 class="blog-post-title">Разработка проекта</h2>
         <p class="blog-post-meta">23 января, 2022 автор: Лаврентий</p>
 
         <p>Сегодня прошла встреча разработчиков, на которой было запланировано множество нового функционала. В ближайшее время ожидайте релиз!</p>
         <p>К релизу готовится следующий функционал. Возможность безопасно делиться файлами, обновление дизайна и страниц и даже встроенный мессенджер!</p>
-        <hr>
     </article>
 </div>
 {% endblock %}
