--- a/app/templates/support.html
+++ b/app/templates/support.html
@@ -3,11 +3,11 @@
 Поддержка
 {% endblock %}
 {% block body %}
-<div class="m-5 col-md-8">
+<div class="m-5 col">
     <h3 class="pb-4 mb-4 fst-italic border-bottom">
         По всем вопросам вы можете обращаться на почту help@lava-land.ru
     </h3>
-    <h3 class="pb-4 mb-4 fst-italic border-bottom">
+    <h3 class="pb-4 mb-4 fst-italic border-bottom text-center">
         Что нового?
     </h3>
     <article class="blog-post my-card p-3">
